fix: alter login and register page to look normal on mobile

--- a/frontend/src/Pages/Login/Auth.css
+++ b/frontend/src/Pages/Login/Auth.css
@@ -35,7 +35,6 @@
 .auth-title {
   margin: 0 auto;
   padding-bottom: 15px;
-  font-size: 2.5rem;
   color: #115fb4;
 }
 
@@ -77,7 +76,7 @@
 
 .auth-submit {
   padding: 10px;
-  width: 40%;
+  width: 200px;
   margin: 20px auto;
   background-color: #115fb4;
   color: white;
